
This is a list of changes since the initial release of Palabra.

Version 0.1.3 (unreleased)
==========================
* Added ability to select words by length in properties window.

Version 0.1.2 (April 2, 2010)
=============================
* Partial support for voids.
* Patterns can be selected for new puzzles.
* Added option to create a backup file before saving.
* Simple Dublin Core standard is used for metadata.
* Speed improvements for word lists (rewritten in C).
* Speed improvements for rendering the editor.

Version 0.1.1 (September 15, 2009)
==================================
* XML files are validated against XML schema.
* Word lists can be used to populate the grid.
* Speed improvements in rendering code.
* Partial support for bars.
* Clue editor is integrated in main window.

Version 0.1 (August 14, 2009)
=============================
* Initial release.