@@ -4,6 +4,7 @@ This is a list of changes since the initial release of Palabra.
 Version 0.1.3 (unreleased)
 ==========================
 * Added ability to select words by length in properties window.
+* Added Scrabble score to properties window.
 
 Version 0.1.2 (April 2, 2010)
 =============================
